--- a/daps-lab1-data-acquisition.ipynb
+++ b/daps-lab1-data-acquisition.ipynb
@@ -2200,7 +2200,263 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#choose one or two country as an example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>date</th>\n",
+       "      <th>Renewable energy consumption (TJ)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Finland</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Finland</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>418361.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Finland</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>405406.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Finland</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>380913.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Finland</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>391897.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Finland</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>352610.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Finland</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>354714.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Finland</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>313251.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Finland</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>355844.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Finland</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>337542.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Finland</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>331943.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    country  date  Renewable energy consumption (TJ)\n",
+       "0   Finland  2016                                NaN\n",
+       "1   Finland  2015                           418361.2\n",
+       "2   Finland  2014                           405406.3\n",
+       "3   Finland  2013                           380913.6\n",
+       "4   Finland  2012                           391897.7\n",
+       "5   Finland  2011                           352610.7\n",
+       "6   Finland  2010                           354714.0\n",
+       "7   Finland  2009                           313251.8\n",
+       "8   Finland  2008                           355844.6\n",
+       "9   Finland  2007                           337542.7\n",
+       "10  Finland  2006                           331943.0"
+      ]
+     },
+     "execution_count": 204,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "FIN_energy=pd.read_csv('FIN.csv')\n",
+    "FIN_energy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>date</th>\n",
+       "      <th>Renewable energy consumption (TJ)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Finland</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Finland</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>418361.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Finland</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>405406.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Finland</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>380913.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Finland</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>391897.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Finland</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>352610.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Finland</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>354714.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Finland</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>313251.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Finland</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>355844.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Finland</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>337542.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Finland</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>331943.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    country  date  Renewable energy consumption (TJ)\n",
+       "0   Finland  2016                                NaN\n",
+       "1   Finland  2015                           418361.2\n",
+       "2   Finland  2014                           405406.3\n",
+       "3   Finland  2013                           380913.6\n",
+       "4   Finland  2012                           391897.7\n",
+       "5   Finland  2011                           352610.7\n",
+       "6   Finland  2010                           354714.0\n",
+       "7   Finland  2009                           313251.8\n",
+       "8   Finland  2008                           355844.6\n",
+       "9   Finland  2007                           337542.7\n",
+       "10  Finland  2006                           331943.0"
+      ]
+     },
+     "execution_count": 205,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "LUX_energy=pd.read_csv('FIN.csv')\n",
+    "LUX_energy"
+   ]
   },
   {
    "cell_type": "code",
